# leaning-actix-rust

./: .env  Cargo.toml
src/: config.rs  main.rs
src/error/: db_error.rs
src/model/: request_model.rs
src/routes/: home_route.rs  mod.rs
src/routes/handler/: home_handler.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  mod.rs
src/utils/database/: db_conn.rs  mod.rs  user_crud.rs
src/utils/database/schema/: user_schema.rs
