[package]
name = "code-1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
serde = "1.0.216"
serde_json = "1.0.133"
lazy_static = "1.4.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
mongodb = "3.1.1"
